fixed Home view cards, font, card spacing, etc

--- a/src/components/views/HomeView/style.css
+++ b/src/components/views/HomeView/style.css
@@ -1,18 +1,18 @@
-body{
+body {
   letter-spacing: 0.5px;
   background: linear-gradient(90deg, rgba(202, 201, 223, 0.75) 0%, rgba(40, 40, 159, 0.95) 0%, rgba(28, 92, 188, 0.75) 30%, rgba(0, 212, 255, 0.75) 100%);
   height: 100%;
 }
 
 .surrounding-box {
-    background: whitesmoke;
-    border-radius: 2rem;
-    margin: 2em 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    overflow: hidden; 
+  background: whitesmoke;
+  border-radius: 2rem;
+  margin: 2em 0;
+  overflow: hidden;
 }
 
-#requestLostItem a, #reportFoundItem a {
+#requestLostItem a,
+#reportFoundItem a {
   line-height: 3;
   font-size: 1.5rem;
   color: rgb(29, 141, 227);
@@ -30,28 +30,29 @@ body{
   margin-left: -10em;
 }
 
-#requestLostItem a:hover, #reportFoundItem a:hover {
+#requestLostItem a:hover,
+#reportFoundItem a:hover {
   color: rgb(255, 251, 251);
   background-color: rgb(29, 141, 227);
 }
 
 .item-list {
-    border-radius: 1.5em;
-    background: white;
-    max-height: 70vh;
-    overflow-y: auto;
-    margin-top: -30px;
+  border-radius: 1.5em;
+  background: white;
+  max-height: 70vh;
+  overflow-y: auto;
+  margin-top: -30px;
 }
 
 .item-tabs {
-    top: 0;
-    z-index: 100;
-    font-size: large;
+  top: 0;
+  z-index: 100;
+  font-size: large;
 }
 
 .items-link {
-    color: rgb(29, 141, 227) !important;
-    padding-left: 2%;
+  color: rgb(29, 141, 227) !important;
+  padding-left: 2%;
 }
 
 .items-link.active {
